@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1670] fixed events from slave nodes not shown when all nodes are selected (Vedmak)
  - [ZBX-1668] fixed saving graphs with web items (Aly)
  - [ZBX-1728] fixed expression deletion in log trigger form (Aly)
  - [ZBX-1357] updated French translation. Thanks to alixen (Richlv)
